feat: add brand support and smoke data updates